--- a/m/notes/first/android/app/build.gradle
+++ b/m/notes/first/android/app/build.gradle
@@ -48,6 +48,18 @@ if (envFile.exists()) {
     throw new GradleException(".env file not found")
 }
 
+// key.properties 경로 확인
+def keystorePropertiesFile = file("${rootProject.projectDir}/key.properties")
+println "key.properties path: ${keystorePropertiesFile.absolutePath}"
+
+def keystoreProperties = new Properties()
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+    println "keystoreProperties loaded successfully: ${keystoreProperties}"
+} else {
+    throw new GradleException("key.properties not found")
+}
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
@@ -84,21 +96,37 @@ android {
     println "Debug Keystore Path: ${debugKeyStorePath}"
     println "Release Keystore Path: ${releaseKeyStorePath}"
 
+//    signingConfigs {
+//        debug {
+//            storeFile file(debugKeyStorePath)
+////            storeFile file('/home/oem/.android/debug.keystore')  // debug 키스토어 경로
+//            storePassword 'android'                              // debug 키스토어 비밀번호
+//            keyAlias 'androiddebugkey'                           // debug 키 별칭
+//            keyPassword 'android'                                // debug 키 비밀번호
+//        }
+//
+//        release {
+//            storeFile file(releaseKeyStorePath)
+////            storeFile file('/home/oem/release-key.jks')         // release 키스토어 경로
+//            storePassword 'your_keystore_password'              // release 키스토어 비밀번호
+//            keyAlias 'your_key_alias'                           // release 키 별칭
+//            keyPassword 'your_key_password'                     // release 키 비밀번호
+//        }
+//    }
+
     signingConfigs {
         debug {
             storeFile file(debugKeyStorePath)
-//            storeFile file('/home/oem/.android/debug.keystore')  // debug 키스토어 경로
-            storePassword 'android'                              // debug 키스토어 비밀번호
-            keyAlias 'androiddebugkey'                           // debug 키 별칭
-            keyPassword 'android'                                // debug 키 비밀번호
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
         }
 
         release {
-            storeFile file(releaseKeyStorePath)
-//            storeFile file('/home/oem/release-key.jks')         // release 키스토어 경로
-            storePassword 'your_keystore_password'              // release 키스토어 비밀번호
-            keyAlias 'your_key_alias'                           // release 키 별칭
-            keyPassword 'your_key_password'                     // release 키 비밀번호
+            storeFile file(keystoreProperties['storeFile'])
+            storePassword keystoreProperties['storePassword']
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
         }
     }
 
@@ -115,6 +143,7 @@ android {
         release {
             signingConfig signingConfigs.release  // release 빌드에 release 서명 사용
             minifyEnabled true                   // 코드 난독화 활성화
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             manifestPlaceholders = [
                     kakaoAppKey: project.KAKAO_NATIVE_APP_KEY,
