--- a/m/notes/first/android/app/src/main/AndroidManifest.xml
+++ b/m/notes/first/android/app/src/main/AndroidManifest.xml
@@ -11,10 +11,15 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
+<!--    <application-->
+<!--        android:label="first"-->
+<!--        android:name="${applicationName}"-->
+<!--        android:icon="@mipmap/ic_launcher"-->
+<!--        android:usesCleartextTraffic="true">-->
+
     <application
         android:label="first"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher"
         android:usesCleartextTraffic="true">
 
         <!-- 🔹 S3 TransferService 추가 -->
