--- a/m/notes/first/android/app/build.gradle
+++ b/m/notes/first/android/app/build.gradle
@@ -83,7 +83,11 @@ android {
         applicationId = "com.example.first"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
+
+        // minSdk = flutter.minSdkVersion
+        minSdk = 24
+        // minSdkVersion = 24
+        minSdkVersion = localProperties.getProperty('flutter.minSdkVersion').toInteger()
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
@@ -155,7 +159,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.flutter_ddd_test"
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 24
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
