--- a/m/notes/first/pubspec.yaml
+++ b/m/notes/first/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
   speech_to_text: ^7.0.0
   camera: ^0.11.1
   flutter_tts: ^4.2.2
+  flutter_sound: ^9.28.0
+  permission_handler: ^11.4.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
